@@ -1,6 +1,9 @@
 2019-03-04  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* bibtex.c, utils.c: Print ICU version in BibTeXu.
+	* utils.c: Default to Flag_8bit in BibTeXu. We should NOT
+	read any csf file in BibTeXu. (BibTeX8 is unaffected)
+	* bibtex-4.c: Fix x_purify() for BibTeXu.
 	* bibtex-2.c: Suppress compiler warnings.
 
 2017-04-27  Karl Berry  <karl@tug.org>
